force-app/main/default/objects/sugati__Errata_Text__c/sugati__Errata_Text__c.object-meta.xml
<CustomObject>
    <label>Errata Text</label>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>Errata Text ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errata Text</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>