force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Airport_Station__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Airport_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport &amp; Station</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Errata Text</relationshipLabel>
    <relationshipName>Errata_Text</relationshipName>
    <type>Lookup</type>
</CustomField>