force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Airport_Station_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Airport_Station_Record_Type__c</fullName>
    <formula>sugati__ET_Airport_Station__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airport/Station Record Type</label>
    <type>Text</type>
</CustomField>