force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>