force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>