force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Errata Text</relationshipLabel>
    <relationshipName>Errata_Text</relationshipName>
    <type>Lookup</type>
</CustomField>