force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Travel_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Travel_To__c</fullName>
    <label>Travel To</label>
    <type>Date</type>
</CustomField>