force-app/main/default/objects/sugati__Errata_Text__c/fields/sugati__ET_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Errata Text</relationshipLabel>
    <relationshipName>Errata_Text</relationshipName>
    <type>Lookup</type>
</CustomField>