force-app/main/default/objects/sugati__Errata_Text__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__ET_Activity__c</columns>
    <columns>sugati__ET_Message__c</columns>
    <columns>sugati__ET_Supplier__c</columns>
    <columns>sugati__ET_Where_to_go__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>